# glfw_glad2

./: CMakeLists.txt  README.md  build.bat
src/: main.c
